fixing dark mode issues

--- a/styles/main.css
+++ b/styles/main.css
@@ -20,6 +20,35 @@
   background-color: #ffff;
   border-radius: 5px; }
 
+.navDark {
+  padding-right: 50px;
+  transition: 0s;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  height: 70px; }
+  .navDark .names {
+    margin: 20px 50px 0px 0px; }
+    .navDark .names a {
+      color: #fff;
+      font-size: 0.81rem; }
+    .navDark .names a:hover {
+      border-bottom: 2px solid #5ED7C6;
+      transition: 0.2s; }
+  .navDark span {
+    display: none; }
+  .navDark .create {
+    display: inline-block;
+    width: 3.375rem;
+    height: 3.375rem; }
+  .navDark .create:hover {
+    cursor: pointer;
+    transition: 0.2s;
+    transform: rotate(360deg);
+    border-radius: 40px;
+    box-shadow: 0px 0px 5px rgba(156, 175, 195, 0.55); }
+
 html {
   font-size: 16px;
   letter-spacing: 0;
@@ -65,7 +94,6 @@ html {
         width: 100%;
         height: 0;
         transition: 0.3s ease;
-        background-color: #562ee5ec;
         z-index: 100000;
         overflow: hidden;
         text-align: center;
@@ -94,7 +122,8 @@ html {
           margin-right: 90px;
           align-self: center; }
     .body-container .header-container #hmb-menu:checked ~ .nav-names {
-      height: 100%; }
+      height: 100%;
+      background-color: #562ee5ec; }
     .body-container .header-container #hmb-menu:checked ~ .hmb-label .bar1 {
       transform: translate(0, 6.2px) rotate(45deg);
       transition: 0.3s ease-out;
@@ -251,8 +280,7 @@ html {
       display: flex;
       flex-direction: row;
       justify-content: flex-end;
-      height: 70px;
-      background: #ffff; }
+      height: 70px; }
       .body-container .header-container .navigation-container .nav-names .names {
         margin: 20px 50px 0px 0px; }
         .body-container .header-container .navigation-container .nav-names .names a {
